--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,38 @@
+attrs==19.3.0
 beautifulsoup4==4.9.0
-certifi==2020.4.5.1
+certifi==2020.6.20
 cffi==1.14.0
 chardet==3.0.4
 cryptography==2.9.2
+gevent==20.6.2
+greenlet==0.4.16
+grequests==0.6.0
 idna==2.9
+importlib-metadata==1.7.0
+more-itertools==8.4.0
 mysql-connector-python==8.0.18
 numpy==1.14.2
+oauthlib==3.1.0
+packaging==20.4
 pandas==0.25.3
+pluggy==0.13.1
 protobuf==3.6.0
+py==1.9.0
 pycparser==2.20
 PyMySQL==0.9.3
 pyOpenSSL==19.1.0
+pyparsing==2.4.7
 PySocks==1.7.1
+pytest==5.4.3
 python-dateutil==2.8.1
 pytz==2020.1
 requests==2.23.0
+requests-oauthlib==1.3.0
 selenium==3.141.0
 six==1.14.0
 soupsieve==2.0.1
 urllib3==1.25.8
+wcwidth==0.2.5
+zipp==3.1.0
+zope.event==4.4
+zope.interface==5.1.0
